minor config updates

--- a/config/_default/params.toml
+++ b/config/_default/params.toml
@@ -59,7 +59,7 @@ enforceLightMode = false
 languageMenuName = "🌐"
 
 # Title separator, default to |.
-# titleSeparator = "|"
+titleSeparator = "|"
 
 # Enable or disable comments globally. Default to true.
 # comments = false
@@ -84,7 +84,7 @@ iconsDir = "icons/" # without a leading forward slash
 # website author
 [author]
 name = "Erik Dahl"
-# photo = "images/jane-doe.png" #include this if you would like to show the author photo on the sidebar
+photo = "images/personal-headshot.jpg" 
 
 [plausible_analytics]
 enable = false # to enable plausible analytics set to true.
