udpated base url

--- a/config/_default/config.toml
+++ b/config/_default/config.toml
@@ -1,6 +1,6 @@
 # set `baseurl` to your root domain
 # if you set it to "/" share icons won't work properly on production
-baseurl = "https://gray-sky-058bf3410.azurestaticapps.net/"  # Include trailing slash
+baseurl = "https://beta.knowyourtoolset.com/"  # Include trailing slash
 # title = "Clarity"  # Edit directly from config/_default/languages.toml # alternatively, uncomment this and remove `title` entry from the aforemention file.
 copyright = "Copyright © 2015-2021, Erik Dahl; all rights reserved."
 # canonifyurls = true
