--- a/config/_default/params.toml
+++ b/config/_default/params.toml
@@ -16,7 +16,7 @@ ga_analytics = "XXXXXXXXXX"
 numberOfTagsShown = 14 # Applies for all other default & custom taxonomies. e.g categories, brands see https://gohugo.io/content-management/taxonomies#what-is-a-taxonomy
 
 # will be used on share >> twitter, facebook, linkedin
-fallBackOgImage = "images/thumbnail.png"
+fallBackOgImage = "logos/logo.png"
 
 # sets the maximum number of lines per codeblock. The codeblock will however be scrollable and expandable.
 codeMaxLines = 7
@@ -28,12 +28,12 @@ codeLineNumbers = false
 enableMathNotation = false
 
 # directory(s) where your articles are located
-mainSections = ["post"] # see config details here https://gohugo.io/functions/where/#mainsections
+mainSections = ["post", "2020"] # see config details here https://gohugo.io/functions/where/#mainsections
 
 # center logo on navbar
 centerLogo = false # Set to "true" for centering or "false" for left aligned.
 
-logo = "logos/logo.png"
+logo = "logos/know-your-toolset-header.png"
 
 # Label Non inline images on an article body
 figurePositionShow = false # toggle on or off globally
@@ -53,7 +53,7 @@ enforceLightMode = false
 # enforceDarkMode = false
 
 # customize footer icon. see issue https://github.com/chipzoller/hugo-clarity/issues/77
-# footerLogo = "icons/copy.svg"
+footerLogo = "icons/android-chrome-192x192.png"
 
 # Text for the languages menu.
 languageMenuName = "🌐"
