--- a/config/_default/params.toml
+++ b/config/_default/params.toml
@@ -2,7 +2,6 @@ twitter = "@dahlsailrunner"
 largeTwitterCard = true # set to true if you want to show a large twitter card image. The default is a small twitter card image
 introDescription = "Technologist, lifelong learner, Pluralsight author, seeker of continuous incremental improvement."
 # introURL = "about/" # set the url for the 'read more' button below the introDescription, or set to false to not show the button
-# description = "" # set your site's description here. will be use for home page content meta tags (seo). Alternatively set this description in your homepage content file i.e content/_index.md. Whatever is set in the latter will take precedence
 
 # showShare = false # Uncomment to not show share buttons on each post. Also available in each post's front matter.
 
@@ -28,7 +27,7 @@ codeLineNumbers = false
 enableMathNotation = false
 
 # directory(s) where your articles are located
-mainSections = ["post", "2020"] # see config details here https://gohugo.io/functions/where/#mainsections
+mainSections = ["post", "2020", "2021"] # see config details here https://gohugo.io/functions/where/#mainsections
 
 # center logo on navbar
 centerLogo = false # Set to "true" for centering or "false" for left aligned.
@@ -43,16 +42,9 @@ figurePositionLabel = "Figure" # the text before image number e.g Figure 1.0
 # Set the collapsed mobile navigation to either appear from the left or the right
 mobileNavigation = "left" # if you prefer right change to 'right'
 
-# some site owners want to decide how they would like their sites to be introduced users. These settings give you as a site owner to decide how the user will view your site for the first time.
-
-# please note that you cannot enforce both modes at the same time. i.e by enforcing one mode, you priotise it over the other (by setting it to true). enforceDarkMode will be commented out
-
-# please also not that mode toggle UI will remain in place. That way, if a user prefers darkmode, they can have their way.
-
 enforceLightMode = false
 # enforceDarkMode = false
 
-# customize footer icon. see issue https://github.com/chipzoller/hugo-clarity/issues/77
 footerLogo = "icons/android-chrome-192x192.png"
 
 # Text for the languages menu.
@@ -70,13 +62,9 @@ titleSeparator = "|"
 # Maximum number of featured posts.
 # numberOfFeaturedPosts = 8
 
-# Date format. Checkout https://gohugo.io/functions/format/#hugo-date-and-time-templating-reference for details.
-# dateFormat = "2006-01-02" # Default to "Jan 2, 2006".
-# customFonts = false # toggle to true if you want to use custom fonts only.
-
 # The year when ths website was created, this value is used in the copyright
 # notice of the footer.
-# since = 2016
+since = 2015
 
 # tell hugo where you store your icons e.g favicons. This is useful if you're using an apache server and there are conflicts >> see issue https://github.com/chipzoller/hugo-clarity/issues/74. If this is applicable to you, be sure to copy the contents of https://github.com/chipzoller/hugo-clarity/tree/master/static/icons to your preferred icons directory 
 iconsDir = "icons/" # without a leading forward slash
