--- a/config/_default/params.toml
+++ b/config/_default/params.toml
@@ -27,7 +27,7 @@ codeLineNumbers = false
 enableMathNotation = false
 
 # directory(s) where your articles are located
-mainSections = ["post", "2020", "2021"] # see config details here https://gohugo.io/functions/where/#mainsections
+mainSections = ["2015", "2016", "2017", "2018", "2019", "2020", "2021"] # see config details here https://gohugo.io/functions/where/#mainsections
 
 # center logo on navbar
 centerLogo = false # Set to "true" for centering or "false" for left aligned.
