--- a/config/_default/params.toml
+++ b/config/_default/params.toml
@@ -6,7 +6,7 @@ introDescription = "Technologist, lifelong learner, Pluralsight author, seeker o
 # showShare = false # Uncomment to not show share buttons on each post. Also available in each post's front matter.
 
 # Google analytics Id
-ga_analytics = "XXXXXXXXXX"
+ga_analytics = "G-91J1T9L0N9"
 
 # Baidu analytics Id
 # baidu_analytics = "XXXXXXXX"
