--- a/config/_default/params.toml
+++ b/config/_default/params.toml
@@ -54,7 +54,7 @@ languageMenuName = "🌐"
 titleSeparator = "|"
 
 # Enable or disable comments globally. Default to true.
-# comments = false
+comments = true
 
 # Maximum number of recent posts.
 # numberOfRecentPosts = 8
