--- a/config/_default/params.toml
+++ b/config/_default/params.toml
@@ -1,6 +1,6 @@
 twitter = "@dahlsailrunner"
 largeTwitterCard = true # set to true if you want to show a large twitter card image. The default is a small twitter card image
-introDescription = "Technologist, lifelong learner, Pluralsight author, seeker of continuous incremental improvement."
+introDescription = "Technologist, lifelong learner, Microsoft MVP, Pluralsight author, seeker of continuous incremental improvement."
 # introURL = "about/" # set the url for the 'read more' button below the introDescription, or set to false to not show the button
 
 # showShare = false # Uncomment to not show share buttons on each post. Also available in each post's front matter.
