added prompt article

--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,5 @@
 resources/_gen/assets/sass/sass/main.sass_472378e5658f981e29d7d71b4f5defab.content
 resources/_gen/assets/sass/sass/main.sass_472378e5658f981e29d7d71b4f5defab.json
+public
+resources/_gen/assets/sass/main.sass_472378e5658f981e29d7d71b4f5defab.content
+resources/_gen/assets/sass/main.sass_472378e5658f981e29d7d71b4f5defab.json
