--- a/config/_default/markup.toml
+++ b/config/_default/markup.toml
@@ -12,6 +12,6 @@
     lineNoStart = 1
     lineNos = true # always set to true # else line numbers won't show at all! even when you toggle them on in the UI
     lineNumbersInTable = false # toggling this on (i.e to true) or deleting this line will break the code blocks functionality. Will
-    noClasses = false
-    # style = "monokai"
+    # noClasses = true
+    style = "dracula"
     tabWidth = 2
